# mcp_wildberries

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
data/: 01-general.yaml  02-items.yaml  03-orders-fbs.yaml  04-orders-dbw.yaml  05-orders-dbs.yaml  06-in-store-pickup.yaml  07-orders-fbw.yaml  08-promotion.yaml  09-communications.yaml  10-tariffs.yaml  11-analytics.yaml  12-reports.yaml  13-finances.yaml
src/: methods.json  server.py
src/mcp_wildberries/: catalog.py  config.py  exceptions.py  extractor.py  models.py  parser.py  search.py  server.py
src/mcp_wildberries/tools/: __init__.py  call_method.py  describe_method.py  list_methods.py  search_methods.py
src/mcp_wildberries/transport/: wb_client.py
